# ollama-rs-gtk

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile.ci  README.md  SECURITY.md  TODO.md  config.toml.example  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/worflows/: Rust.yml
.github/workflows/: Rust.yml  ci-cd.yml  ci-image.yml  release.yml  rust.yml
ollama_rs/: all.html  constant.AUTHORS.html  constant.DESCRIPTION.html  constant.NAME.html  constant.OLLAMA_API_URL.html  constant.REQUEST_TIMEOUT.html  constant.VERSION.html  index.html  macro.clone.html  sidebar-items.js
ollama_rs/api/: fn.send_prompt.html  index.html  sidebar-items.js
ollama_rs/config/: index.html  struct.Config.html
ollama_rs/menu/: fn.build_system_menu.html  index.html  sidebar-items.js
ollama_rs/preview/: index.html  sidebar-items.js  struct.Preview.html
ollama_rs/ui/: fn.build_ui.html  index.html  sidebar-items.js
ollama_rs/utils/: fn.buffer_to_string.html  fn.configure_sourceview.html  fn.open_file.html  fn.save_file.html  fn.set_title.html  index.html  sidebar-items.js
search.desc/ollama_rs/: ollama_rs-desc-0-.js
search.index/: 0e4995e48c80.js  1fad19508478.js  root.js
search.index/crateNames/: 5ff9f948f7e6.js
search.index/desc/: 6409fbc2012d.js
search.index/entry/: 9065bbec8a4b.js
search.index/function/: 4fb7bd57da82.js
search.index/generic_inverted_index/: 31176d8fba21.js
search.index/name/: 5c405944b7c7.js
search.index/normalizedName/: 331150255ff1.js
search.index/path/: a89ef1518110.js
search.index/type/: 06901a70575d.js
src/: api.rs  config.rs  github-markdown-dark.css  highlight.css  lib.rs  main.rs  menu.rs  preview.rs  ui.glade  ui.rs  utils.rs
src/ollama_rs/: api.rs.html  config.rs.html  lib.rs.html  menu.rs.html  preview.rs.html  ui.rs.html  utils.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/serde_core/de/: trait.Deserialize.js
(+2 files in other folders)
