[package]
name = "ollama-rs"
version = "0.2.0"
authors = ["Andres Caicedo <andrezz1997@gmail.com>"]
description = "A simple GTK interface for Ollama."
license = "MIT"
repository = "@AndresCdo/ollama-rs"
edition = "2018"

[dependencies]
gio = "0.9.1"
sourceview = "0.9"
comrak = "0.16"
horrorshow = "0.8.4"
webkit2gtk = "0.10"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
glib = "0.20.0"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]

[env]
PKG_CONFIG_PATH = "/usr/lib/x86_64-linux-gnu/pkgconfig"