[package]
name = "ollama-rs"
version = "0.2.0"
authors = ["Andres Caicedo <andrezz1997@gmail.com>"]
description = "A simple GTK interface for Ollama."
license = "MIT"
repository = "@AndresCdo/ollama-rs"
edition = "2018"

[dependencies]
ammonia = "4.0"
handlebars = "6.0"
anyhow = "1.0.86"
comrak = "0.16"
gio = "0.9.1"
glib = "0.20.0"
horrorshow = "0.8.4"
lazy_static = "1.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.121"
sourceview = "0.9"
tokio = { version = "1.39.2", features = ["full"] }
yaml-rust = { version = "0.8.1", package = "yaml-rust2" }
webkit2gtk = "0.11"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]
