[package]
name = "ollama-rs"
version = "0.2.0"
authors = ["Andres Caicedo <andrezz1997@gmail.com>"]
description = "A simple GTK interface for Ollama."
license = "MIT"
repository = "@AndresCdo/ollama-rs"
edition = "2018"

[dependencies]
ammonia = "4.0"
handlebars = "6.0"
anyhow = "1.0.86"
comrak = "0.16"
gio = "0.18"
glib = "0.18"
gtk = "0.18"
horrorshow = "0.8.4"
lazy_static = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"
sourceview4 = "0.5"
toml = "0.8"
tokio = { version = "1.39.2", features = ["full"] }
yaml-rust = { version = "0.8.1", package = "yaml-rust2" }
webkit2gtk = { version = "2.0", features = ["v2_28"] }
